<?xml version="1.0"?>
<package>
  <name>faps_local_planner</name>
  <version>0.0.0</version>
  <description>

	faps_local_planner implements a plugin to the base_local_planner. This the robot will follow the global path as it is, without creating a local path.   

  </description>

  <maintainer email="zeroes0049@gmail.com">zeroes0049</maintainer>

  <license>none</license>

  <author email="zeroes0049@gmail.com">zeroes0049</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <build_depend>base_local_planner</build_depend>

  <build_depend>control_toolbox</build_depend>

  <build_depend>cmake_modules</build_depend> 

  <build_depend>costmap_2d</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <build_depend>nav_core</build_depend>

  <build_depend>nav_msgs</build_depend>

  <build_depend>pluginlib</build_depend>

  <build_depend>roscpp</build_depend>

  <build_depend>tf</build_depend>

  <build_depend>tf_conversions</build_depend>

  <build_depend>std_msgs</build_depend>
  
  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>pcl_conversions</build_depend>


  <run_depend>eigen</run_depend>

  <run_depend>base_local_planner</run_depend>

  <run_depend>control_toolbox</run_depend>

  <run_depend>costmap_2d</run_depend>

  <run_depend>geometry_msgs</run_depend>

  <run_depend>nav_core</run_depend>

  <run_depend>nav_msgs</run_depend>

  <run_depend>pluginlib</run_depend>

  <run_depend>roscpp</run_depend>

  <run_depend>tf</run_depend>

  <run_depend>tf_conversions</run_depend>

  <run_depend>std_msgs</run_depend>

  <run_depend>dynamic_reconfigure</run_depend>


  <export>

    <nav_core plugin="${prefix}/faps_plugin.xml"/>

  </export>


</package>
